Fix official sub menu overflow

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -125,6 +125,7 @@
 
   .menu--sub {
     display: flex;
+    flex-flow: row wrap;
   }
 
   .menu--sub-1 {
